<resources>
    <string name="app_name" translatable="false">My VKU</string>
    <string name="server_client_id" translatable="false">880553460800-avf5t7quhmfggpitm8adc83oqd2gojlo.apps.googleusercontent.com</string>
    <string name="elearning_mode" translatable="false">elearning</string>
    <string name="firebase_forum_notification_channel" translatable="false">dev.tsnanh.myvku.firebase_forum_notification_channel</string>
    <string name="night_mode_key" translatable="false">night_mode_preferences</string>
    <string name="replies_per_page_key" translatable="false">replies_per_page_key</string>
    <string name="timetable_mode_key" translatable="false">timetable_mode</string>
    <string name="text_forum">Forum</string>
    <string name="vku_image" translatable="false">VKU Image</string>
    <string name="text_confession" translatable="false">Confession</string>
    <string name="text_thong_bao_khtc">Financial planning</string>
    <string name="text_view">See</string>
    <string name="text_share">Share</string>
    <string name="title_activity_settings">Settings</string>
    <string name="preferences_key" translatable="false">dev.tsnanh.myvku</string>
    <string name="text_news">News</string>
    <string name="text_thong_bao_chung">General</string>
    <string name="text_thong_bao_ctsv">Student Work</string>
    <string name="text_options">Options</string>
    <string name="text_new_thread">New Thread</string>
    <string name="text_uncategorized">Uncategorized</string>
    <string name="vku_database" translatable="false">vku_database</string>
    <string name="text_title">Title</string>
    <string name="text_content">Content</string>
    <string name="text_submit">Submit</string>
    <string name="text_choose_image">Choose Image</string>
    <string name="text_clear_image_content" translatable="false"><![CDATA[<i>add later</i>]]></string>
    <string name="text_add_photo">Add photo</string>
    <string name="text_about">About us :)</string>
    <string name="text_display">Display</string>
    <string name="text_night_mode">Night mode</string>
    <string name="text_night_mode_summary">Change display mode</string>
    <string name="text_reply_image">Add photo(s)</string>
    <string name="text_timetable">Timetable</string>
    <string name="text_more">More</string>
    <string name="toolbar_image_transition_key" translatable="false">toolbar_image</string>
    <string name="new_thread_channel_name" translatable="false">New Thread</string>
    <string name="new_thread_channel_id" translatable="false">dev.tsnanh.myvku.newthread.notification</string>
    <string name="text_reply">Reply</string>
    <string name="text_new_reply">New Reply</string>
    <string name="text_cancel">Cancel</string>
    <string name="image_transition_name" translatable="false">image</string>
    <string name="text_bug_report">Bug Report</string>
    <string name="text_archive">Archive</string>
    <string name="text_report">Report</string>
    <string name="text_set_alarm">Set Alarm</string>
    <string name="text_attendance">Attendance</string>
    <string name="text_monday">Monday</string>
    <string name="text_tuesday">Tuesday</string>
    <string name="text_wednesday">Wednesday</string>
    <string name="text_thursday">Thursday</string>
    <string name="text_friday">Friday</string>
    <string name="text_saturday">Saturday</string>
    <string name="text_sunday">Sunday</string>
    <string name="text_sign_in_with_google">Sign In With Google</string>
    <string name="text_sign_out">Sign Out</string>
    <string name="text_replies_per_page">Number of reply per page</string>
    <string name="text_summary_replies_per_page">Change the number of reply per page.</string>
    <string name="text_last_page">Last page</string>
    <string name="text_first_page">First page</string>
    <string name="text_previous_page">Previous Page</string>
    <string name="text_next_page">Next Page</string>
    <string name="text_teacher_evaluation">Teacher Evaluation</string>
    <string name="text_elearning" translatable="false">E-Learning</string>
    <string name="text_home">Home</string>
    <string name="text_calendar">Calendar</string>
    <string name="text_message">Message</string>
    <string name="text_notification">Notification</string>
    <string name="text_notifications">Notifications</string>
    <string name="text_exit">Exit</string>
    <string name="week">Week: </string>
    <string name="room">Room: </string>
    <string name="lesson">Lesson: </string>
    <string name="text_not_available">Not available</string>
    <string name="school_reminder_channel_id" translatable="false">dev.tsnanh.myvku.school_reminder</string>
    <string name="school_reminder_channel_name" translatable="false">School Reminder</string>
    <string name="title_notification_school_reminder_no_subject" translatable="false">Hooray!</string>
    <string name="content_notification_school_reminder_no_subject">You have a day off today!</string>
    <string name="title_notification_school_reminder_no_subject_morning" translatable="false">Yay!</string>
    <string name="message_notification_school_reminder_no_subject_morning">You have no class this morning!</string>
    <string name="title_notification_school_reminder_no_subject_afternoon" translatable="false">Tadaaaa!</string>
    <string name="message_notification_school_reminder_no_subject_afternoon">You have no class this afternoon.</string>
    <string name="message_notification_school_reminder_has_subject_morning">You have %s at %s at %s in this morning.</string>
    <string name="message_notification_school_reminder_has_subject_afternoon">You have %s at %s at %s in this afternoon.</string>
    <string name="message_notification_school_reminder_has_subject_tomorrow">You have %s at %s at %s in tomorrow morning.</string>
    <string name="text_show_all">Show all</string>
    <string name="msg_thread_creating">Your thread is being created…</string>
    <string name="msg_permission_granted">Permission granted</string>
    <string name="text_uploading">Uploading</string>
    <string name="err_msg_request_timeout">Request timeout!</string>
    <string name="err_msg_socket_exception">Cannot fetch news!</string>
    <string name="text_something_went_wrong">Something went wrong!</string>
    <string name="msg_no_image_selected">No image selected!</string>
    <string name="msg_creating_your_thread">Creating your thread…</string>
    <string name="text_create_new_thread">Create New Thread</string>
    <string name="msg_successfully_created">is successfully created!</string>
    <string name="text_loading_forums">Loading forums…</string>
    <string name="msg_permission_required">Permission required</string>
    <string name="msg_need_permission">We need permission to upload your image!</string>
    <string name="text_ok" translatable="false">OK</string>
    <string name="msg_pick_image_canceled">Canceled!</string>
    <string name="msg_empty_title">Empty thread title</string>
    <string name="msg_choose_a_forum">Choose a forum!</string>
    <string name="msg_empty_content">Empty content</string>
    <string name="text_are_u_sure">Are you sure?</string>
    <string name="text_hide">HIDE</string>
    <string name="msg_alarm_set">Alarm set!</string>
    <string name="text_show_all_subjects">Show all subjects</string>
    <string name="text_show_all_subject_summary">Display all subjects in your timetable</string>
    <string name="show_all_subjects_key" translatable="false">dev.tsnanh.myvku.showallsubjects</string>
    <string name="text_teacher_email" translatable="false">Email: %s</string>
    <string name="text_teacher_phone" translatable="false">Phone: %s</string>
    <string name="threadNameTime" translatable="false">%s - %s</string>
    <string name="threadDetails" translatable="true">Threads: %d Replies: %d</string>
    <string name="title_and_full_name" translatable="false">%s. %s</string>
    <string name="emptyLatestThread">The forum is currently empty!</string>
    <string name="text_processing">Processing…</string>
    <string name="text_create">Create</string>
    <string name="text_create_new_reply">Create New Reply</string>
    <string name="userSaid"><u>%s said:</u></string>
    <string name="text_love">Love</string>
    <string name="text_message_like">has loved your reply!</string>
    <string name="text_message_to_owner">has replied your thread!</string>
    <string name="text_message_to_quoted_user">has quoted your reply!</string>
    <string name="text_message_to_owner_custom">has quoted your reply in your thread!</string>
    <string name="text_message_to_all_subscribers">has replied in your thread you are following!</string>
    <string name="notificationMessage" translatable="false"><b>%s</b> %s</string>
    <string name="text_update_reply">Update Reply</string>
    <string name="text_update">Update</string>
    <string name="text_no_internet_connection">No internet connection.</string>
    <string name="text_write_a_review">Write a review</string>
    <string name="text_rate">Rate</string>
    <string name="text_email_not_provided">Email not provided</string>
    <string name="text_notice_board">Notice Board</string>
    <string name="absence_class_name" translatable="false">Nghỉ %s ngày %s</string>
    <string name="text_absences">Absences</string>
    <string name="text_makeup_classes">Makeup classes</string>
    <string name="makeup_class_name" translatable="false">%s ngày %s</string>
    <string name="text_no_attachment">No Attachment</string>
    <string name="text_come_in_class">Come in class</string>
    <string name="content_notification_school_reminder_no_subject_tomorrow_morning">You have no class tomorrow morning!</string>
    <string name="title_school_reminder_how_is_your_day">How is your day?</string>
    <string name="text_all">All</string>
    <string name="text_today">Today</string>
    <string name="text_tomorrow">Tomorrow</string>
    <string name="text_phone_not_provided">Phone number not provided</string>
    <string name="text_edit_thread_title">Edit thread title</string>
    <string name="text_application_has_no_forums">Application has no forums yet.</string>
    <string name="text_forum_notification">Forum Notification</string>
    <string name="text_logged_in_as">Logged in with %s</string>
    <string name="text_cannot_connect_to_server">Cannot connect to server</string>
    <string name="text_no_internet_and_switch_to_offline">No Internet. Switched to offline mode.</string>
    <string name="text_unknown_version">Unknown Version</string>
    <string name="text_school_remider">School reminder</string>
    <string name="text_my_vku_is_running">My VKU is running…</string>
    <string name="text_good_evening">Good evening!</string>
    <string name="text_sorry_for_inconvenience">We are sorry for inconvenience.</string>
    <string name="text_notification_from">Notification from %s</string>
    <string name="text_what_do_u_want_to_do">What do you want to do?</string>
    <string name="text_open_in_browser">Open in Browser</string>
    <string name="text_view_attachment">View attachment</string>
    <string name="text_minimum_content_length">Minimum content length is 25</string>
    <string name="text_empty_reply_content">Empty reply content</string>
    <string name="text_maximum_five_images">Maximum 5 images</string>
    <string name="text_minimum_title_length">Minimum title length is 10</string>
    <string name="text_share_via">Share via</string>
    <string name="text_attachment">Attachment</string>
    <string name="text_deleteing_thread">Deleting %s…</string>
    <string name="text_account">Account</string>
    <string name="school_reminder_time_key" translatable="false">dev.tsnanh.myvku.school.reminder.time</string>
    <string name="school_reminder_time_title">School reminder time</string>
    <string name="school_reminder_time_summary">Change when the app reminds you to go to school</string>
</resources>