<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 My VKU by tsnAnh
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:key="@string/preferences_key">

    <PreferenceCategory android:title="@string/text_display">

        <ListPreference
            android:defaultValue="system"
            android:dialogIcon="@drawable/ic_round_brightness_6_24"
            android:entries="@array/night_mode_entries"
            android:entryValues="@array/night_mode_values"
            android:icon="@drawable/ic_round_brightness_6_24"
            android:key="@string/night_mode_key"
            android:summary="@string/text_night_mode_summary"
            android:title="@string/text_night_mode" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/text_school_remider">
        <ListPreference
            android:defaultValue="30"
            android:entries="@array/school_reminder_time_entries"
            android:entryValues="@array/school_reminder_time_values"
            android:icon="@drawable/ic_round_school_black_24"
            android:key="@string/school_reminder_time_key"
            android:summary="@string/school_reminder_time_summary"
            android:title="@string/school_reminder_time_title"
            app:dialogIcon="@drawable/ic_round_school_black_24" />
    </PreferenceCategory>
</PreferenceScreen>