<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/app_name">
        <menu>
            <group
                android:id="@+id/navigation_group_my_vku"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/navigation_news"
                    android:icon="@drawable/ic_round_news_24"
                    android:title="@string/text_news" />
                <item
                    android:id="@+id/navigation_forum"
                    android:icon="@drawable/forum_menu_item_icon_state"
                    android:title="@string/text_forum" />
                <item
                    android:id="@+id/navigation_timetable"
                    android:icon="@drawable/timetable_menu_item_icon_state"
                    android:title="@string/text_timetable" />
                <item
                    android:id="@+id/navigation_notifications"
                    android:icon="@drawable/notification_menu_item_icon_state"
                    android:title="@string/text_notifications" />
                <item
                    android:id="@+id/navigation_teacher_evaluation"
                    android:icon="@drawable/teacher_evaluation_menu_item_icon_state"
                    android:title="@string/text_teacher_evaluation" />
                <item
                    android:id="@+id/navigation_attendance"
                    android:icon="@drawable/attendance_menu_item_icon_state"
                    android:title="@string/text_attendance" />
            </group>
        </menu>
    </item>
    <item android:title="@string/text_elearning">
        <menu>
            <group android:id="@+id/navigation_group_elearning">
                <item
                    android:id="@+id/navigation_elearning"
                    android:icon="@drawable/elearning_menu_item_icon_state"
                    android:title="@string/text_elearning" />
            </group>
        </menu>
    </item>
    <item android:title="@string/title_activity_settings">
        <menu>
            <group android:id="@+id/navigation_group_settings">
                <item
                    android:id="@+id/navigation_settings"
                    android:icon="@drawable/settings_menu_item_icon_state"
                    android:title="@string/title_activity_settings" />
            </group>
        </menu>
    </item>
    <item android:title="@string/text_account">
        <menu>
            <group android:id="@+id/navigation_group_account">
                <item
                    android:id="@+id/navigation_sign_out"
                    android:icon="@drawable/ic_baseline_exit_to_app_24"
                    android:title="@string/text_sign_out" />
            </group>
        </menu>
    </item>
</menu>