<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 My VKU by tsnAnh
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_first_page"
        android:icon="@drawable/ic_round_first_page_24"
        android:title="@string/text_first_page"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_previous_page"
        android:icon="@drawable/ic_round_navigate_before_24"
        android:title="@string/text_previous_page"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_next_page"
        android:icon="@drawable/ic_round_navigate_next_24"
        android:title="@string/text_next_page"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_last_page"
        android:icon="@drawable/ic_round_last_page_24"
        android:title="@string/text_last_page"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_archive"
        android:icon="@drawable/ic_round_archive_24"
        android:title="@string/text_archive"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_report"
        android:icon="@drawable/ic_report_black_24dp"
        android:title="@string/text_report"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_bug_report"
        android:icon="@drawable/ic_round_bug_report_24"
        android:title="@string/text_bug_report"
        app:showAsAction="never" />
</menu>