<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_elearning_home"
        android:icon="@drawable/ic_round_home_24"
        android:title="@string/text_home" />
    <item
        android:id="@+id/navigation_elearning_calendar"
        android:icon="@drawable/ic_round_calendar_today_24"
        android:title="@string/text_calendar" />
    <item
        android:id="@+id/navigation_elearning_message"
        android:icon="@drawable/ic_round_message_24"
        android:title="@string/text_message" />
    <item
        android:id="@+id/navigation_elearning_notification"
        android:icon="@drawable/ic_round_notifications_24"
        android:title="@string/text_notification" />
    <item
        android:id="@+id/navigation_elearning_option"
        android:icon="@drawable/ic_round_menu_24"
        android:title="@string/text_options" />
</menu>