<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 My VKU by tsnAnh
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_news"
        android:title="@string/text_news" />
    <item
        android:id="@+id/navigation_forum"
        android:icon="@drawable/ic_forum"
        android:title="@string/text_forum" />
    <item
        android:id="@+id/navigation_my_class"
        android:icon="@drawable/ic_class_black_24dp"
        android:title="@string/text_my_class" />
    <item
        android:id="@+id/navigation_timetable"
        android:icon="@drawable/ic_timetable"
        android:title="@string/text_timetable" />
    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more_black_24dp"
        android:title="@string/text_more" />
</menu>