<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 My VKU by tsnAnh
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/navigation_news">

    <fragment
        android:id="@+id/navigation_news"
        android:name="dev.tsnanh.myvku.views.news.NewsFragment"
        android:label="@string/text_news"
        tools:layout="@layout/fragment_news">
        <action
            android:id="@+id/action_navigation_news_to_activity_news"
            app:destination="@id/activity_news" />
    </fragment>
    <activity
        android:id="@+id/activity_news"
        android:name="dev.tsnanh.myvku.views.news.NewsActivity"
        tools:layout="@layout/activity_news">
        <argument
            android:name="url"
            app:argType="string" />
        <argument
            android:name="title"
            app:argType="string" />
    </activity>
    <fragment
        android:id="@+id/navigation_timetable"
        android:name="dev.tsnanh.myvku.views.timetable.TimetableFragment"
        android:label="Timetable" />
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="dev.tsnanh.myvku.views.notification.NotificationsFragment"
        android:label="@string/text_notification" />
    <activity
        android:id="@+id/activity_settings"
        android:name="dev.tsnanh.myvku.views.settings.SettingsActivity"
        android:label="@string/title_activity_settings" />
    <fragment
        android:id="@+id/navigation_teacher_evaluation"
        android:name="dev.tsnanh.myvku.views.teacherevaluation.TeacherEvaluationFragment" />
    <fragment
        android:id="@+id/navigation_attendance"
        android:name="dev.tsnanh.myvku.views.attendance.AttendanceFragment"
        android:label="@string/text_attendance" />
</navigation>