<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="dev.tsnanh.vku.view.newthread.NewThreadViewModel" />

        <variable
            name="pickerHasImage"
            type="Boolean" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_forum"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/text_forum"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_title"
                    app:startIconDrawable="@drawable/ic_forum">

                    <AutoCompleteTextView
                        android:id="@+id/forum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:labelFor="@id/layout_forum"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/text_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/list_image_upload"
                    app:startIconDrawable="@drawable/ic_title_black_24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textNoSuggestions|textCapSentences" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/text_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_forum"
                    app:startIconDrawable="@drawable/ic_subject_black_24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine|textCapSentences"
                        android:lines="8" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_image_upload"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scrollbars="horizontal"
                    app:hasImage="@{ pickerHasImage }"
                    app:layout_constraintDimensionRatio="16:9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:listitem="@layout/item_image_chooser"
                    tools:visibility="visible" />

                <Button
                    android:id="@+id/choose_image"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_choose_image"
                    app:icon="@drawable/ic_camera_alt_black_24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/list_image_upload"
                    app:layout_constraintEnd_toEndOf="@+id/list_image_upload"
                    app:layout_constraintStart_toStartOf="@+id/list_image_upload"
                    app:layout_constraintTop_toTopOf="@+id/list_image_upload"
                    app:pickerHasImage="@{ pickerHasImage }" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_behavior="com.google.android.material.floatingactionbutton.FloatingActionButton$Behavior"
            android:layout_gravity="bottom|end"
            android:text="@string/text_submit"
            android:src="@drawable/ic_add_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>